[package]
name = "kanami"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = "0.7.3"
gdk4 = "0.7.3"
toml = "0.8.8"
serde = {version ="1.0.191",  features = ["derive"]}
gtk4-layer-shell = "0.2.0"
wayland-client = "0.31.1"
