[package]
name = "kanami"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A powermenu"
readme = "readme.md"
homepage = "https://github.com/nryotaro/kanami"
documentation = "https://github.com/nryotaro/kanami"
repository = "https://github.com/nryotaro/kanami"
keywords = ["sway", "powermenu"]
exclude = [
  "README.md",
  "style.css",
  "config.toml"
]

[dependencies]
gtk4 = {version="0.7.3", features=["v4_10"]}
gdk4 = {version="0.7.3", features=["v4_10"]}
glib = "0.18.3"
gio = "0.18.3"
toml = "0.8.8"
serde = {version ="1.0.191",  features = ["derive"]}
gtk4-layer-shell = "0.2.0"
wayland-client = "0.31.1"
